Fix langSwitcher on mobile.

--- a/wp-content/themes/ifbbpro/scss/components/_langSwitcher.scss
+++ b/wp-content/themes/ifbbpro/scss/components/_langSwitcher.scss
@@ -42,3 +42,9 @@
 		width: fit-content;
 	}
 }
+
+@media (max-width: 500px) {
+	.langSwitcher--menu {
+		margin-left: 0;
+	}
+}
